# python_oop_course

./: README.md  poster.txt  pyproject.toml
1_introduction/: 0_prior.ipynb  1_definition.ipynb  2_operations.ipynb  3_instance.ipynb  3x.py  4_parameters.ipynb  4x.py
2_pillars/: 1_inheritance.ipynb  1x.py  2_encapsulation.ipynb  2x.py  3_abstraction.ipynb  3x.py  3x2.py  4_polymorphism.ipynb  4x.py  4x2.py
3_quality/: 1_cohesion.ipynb  1x.py  2_coupling.ipynb  2x.py
4_solid/: 1_SRP.ipynb  1x.py  2_OCP.ipynb  2x.py  3_LSP.ipynb  3x.py  4_ISP.ipynb  4x.py  5_DIP.ipynb
media/: python_oop.drawio
