[tool.poetry]
name = "python_oop"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.10"
multipledispatch = "^0.6.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
